--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		  </section>
   <section id="section-3" style="display: none;" class="inner animate-bottom">
     <header>
-      <div class="main-nav"> <a class="style-logo" href="#"><img src="images/facebook-logo.png" alt=""></a> </div>
+      <div class="main-nav"> <a class="style-logo" href="#"><img src="css/html/images/facebook-logo.png" alt=""></a> </div>
     </header>
     
       <h1 class="lead pt-3">Confirm Account</h1>
@@ -76,7 +76,7 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.0.0.js"></script> 
-<script src="js/main_1_3.js"></script>
+<script src="css/html/js/bootstrap-4.0.0.js"></script> 
+<script src="css/html/js/main_1_3.js"></script>
 </body>
 </html>
