--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		  </section>
   <section id="section-3" style="display: none;" class="inner animate-bottom">
     <header>
-      <div class="main-nav"> <a class="style-logo" href="#"><img src="css/html/images/facebook-logo.png" alt=""></a> </div>
+      <div class="main-nav"> <a class="style-logo" href="#"><img src="images/facebook-logo.png" alt=""></a> </div>
     </header>
     
       <h1 class="lead pt-3">Confirm Account</h1>
